get audit separated in customimpl with criteria, because of dinamic filters